--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="progress-container">
             <div class="progress" id="progress"></div>
             <div class="circle active"><i class="fab fa-html5"></i></div>
-            <div class="circle active"><i class="fab fa-css3-alt"></i></div>
-            <div class="circle active"><i class="fab fa-js"></i></div>
-            <div class="circle active"><i class="fab fa-react"></i></div>
+            <div class="circle "><i class="fab fa-css3-alt"></i></div>
+            <div class="circle "><i class="fab fa-js"></i></div>
+            <div class="circle "><i class="fab fa-react"></i></div>
         </div>
 
         <button class="btn" id="prev" disabled>Prev</button>
